fixed footer anchor tags and some media queries spacing

--- a/animation.css
+++ b/animation.css
@@ -154,11 +154,6 @@
     color: #007BFF;
 }
 
-.foot-links a:focus {
-    border: 1px solid #007BFF;
-    padding: 0.1em 1em;
-}
-
 .foot-links a:before {
     content: "";
     position: absolute;
